# stego-sign

./: .env.example  .gitignore  DEPLOY.md  LICENSE  Makefile  compose.yml
app/: .gitignore  Cargo.toml  README.md
app/src/: app.rs  config.rs  lib.rs  main.rs
app/src/features/: mod.rs
app/src/features/documents/: api.rs  mod.rs  page.rs
app/src/features/home/: api.rs  page.rs
app/src/features/sign/: api.rs
app/src/features/verify/: api.rs  page.rs
app/src/features/verify/components/: code_input.rs  code_result.rs  drop_zone.rs  mod.rs  result_card.rs
app/src/shared/: config.rs  mod.rs
app/src/shared/components/: footer.rs  navbar.rs
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
server/migrations/: delete_schema_app.sql  delete_schema_files.sql  doc.md  reset_schema_app.sql  reset_schema_files.sql  schema_app.sql  schema_files.sql
server/src/: main.rs
server/src/config/: cors.rs  db.rs  env.rs  logger.rs  mod.rs
server/src/handlers/: admin.rs  documents.rs  health.rs  mod.rs  registry.rs  sign.rs  stats.rs  storage_download.rs  verify.rs
server/src/models/: audit_log.rs
server/src/repositories/: audit_log.rs  document.rs  mod.rs
server/src/routes/: health.rs  v1.rs
server/src/services/: storage.rs  watermark.rs
